--- a/jpa-exam/src/main/resources/application.properties
+++ b/jpa-exam/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.dBasicBinder=TRACE
+server.port=9090
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.dBasicBinder=TRACE
