--- a/spring-exam/pom.xml
+++ b/spring-exam/pom.xml
@@ -156,6 +156,12 @@
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>org.apache.maven.plugins</groupId>
+        	<artifactId>maven-compiler-plugin</artifactId>
+        	<version>3.1</version>
+        	<type>maven-plugin</type>
+        </dependency>
     </dependencies>
 
 </project>
