--- a/spring-exam/pom.xml
+++ b/spring-exam/pom.xml
@@ -156,6 +156,12 @@
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-tx</artifactId>
+		    
+		</dependency>
     </dependencies>
     
     <reporting>
